--- a/teste_git/teste_git.html
+++ b/teste_git/teste_git.html
@@ -1,13 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/teste_git.css">
+    <title>Document</title>
 </head>
-
 <body>
-<<<<<<< HEAD
-   <h1>meu primeiro commit</h1> 
-=======
+    <h1>meu primeiro commit</h1> 
     <h1> teste</h1>
     <section>
         <div class="one">
@@ -19,7 +20,6 @@
 
 
     </section>
->>>>>>> parent of 9d444f4 (Update teste_git.html)
+    
 </body>
-
 </html>
