--- a/Projeto/Professores/index.html
+++ b/Projeto/Professores/index.html
@@ -16,7 +16,7 @@
     <header>
         <div id="logo">
             <h1><img src="./imagens/logo_semfundo.png" alt="logo"></h1>
-            <p>Lucas</p>
+            <p>Lucas--</p>
         </div>
 
         <nav class="menu">
