--- a/Projeto/Professores/index.html
+++ b/Projeto/Professores/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="media.css">
     <link rel="shortcut icon" href="./imagens/favicon.png" type="image/x-icon">
     <script src="script.js"></script>
-    <title>Best Burger</title>
+    <title>Bes Burger</title>
 </head>
 
 <body>
